# twenty_questions_game

./: .dockerignore  .gitignore  Dockerfile  PRD.md  README.md  app.py  background.html  config.yaml  inspect_strands.py  main.py  prompts.yaml  pyproject.toml  render.yaml  requirements.txt  session_monitor.py
.gemini/: settings.json
