[project]
name = "twentyqgames"
version = "0.1.0"
description = "Twenty Questions - Fantastic AI Games for children"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "streamlit>=1.29.0",
    "anthropic>=0.3.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    "strands-agents[openai]",
    "strands-agents-tools",
]
